# life-assistant

./: .env.example  .gitignore  .prettierignore  AI_SPECS.md  CLAUDE.md  DATA_MODEL.md  DEPLOYMENT.md  DEVELOPMENT.md  ENGINEERING.md  INTEGRATIONS_SPECS.md  MILESTONES.md  PRODUCT_SPECS.md  README.md  SYSTEM_SPECS.md  TBD_TRACKER.md  eslint.config.js  package.json  pnpm-lock.yaml  tsconfig.json  turbo.json  vercel.json
services/ai/: .dockerignore  Dockerfile  pyproject.toml
services/ai/app/: config.py  dependencies.py  main.py  observability.py
services/ai/app/agents/: graph.py  llm.py  registry.py  save_response.py  state.py  triage.py
services/ai/app/agents/domains/: finance.py  general.py  memory.py  tracking.py  (+1 more)
services/ai/app/db/: __init__.py  engine.py  session.py
services/ai/app/prompts/: context_builder.py  system.py
services/ai/app/workers/: __init__.py  consolidation.py  consolidation_prompt.py  scheduler.py  utils.py
services/ai/scripts/: check_schema_drift.py
services/ai/tests/: conftest.py  test_agents.py  test_auth.py  test_chat_endpoint.py  test_chat_resume.py  test_confirmable_tool_node.py  test_confirmation.py  test_consolidation.py  test_context_builder.py  test_finance_helpers.py  test_finance_tools.py  test_graph.py  test_health.py  test_input_validation.py  test_intent_classifier.py  test_llm_factory.py  test_memory_tools.py  test_models.py  test_multi_agent_graph.py  test_observability.py  test_registry.py  test_repositories.py  test_request_id_middleware.py  test_rls.py  test_tracking_tools.py  test_triage.py  test_workers.py
(+731 files in other folders)
